// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Funcionality when is enabled snapshot 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#6472ee",
        "borderRadius": 10,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "padding": 12,
      },
      Object {
        "backgroundColor": "#6472ee",
      },
    ]
  }
  testID="SignUpBtn"
>
  <Text
    style={
      Object {
        "color": "#FFF",
        "fontSize": 18,
        "fontWeight": "bold",
        "textAlign": "center",
      }
    }
    testID="btnTitle"
  >
    Sign Up
  </Text>
</ForwardRef>
`;

exports[`SignUpButton component renders as expected renders correctly 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#6472ee",
        "borderRadius": 10,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 5,
        "padding": 12,
      },
      Object {
        "backgroundColor": "#b6b7ba",
      },
    ]
  }
  testID="SignUpBtn"
>
  <Text
    style={
      Object {
        "color": "#FFF",
        "fontSize": 18,
        "fontWeight": "bold",
        "textAlign": "center",
      }
    }
    testID="btnTitle"
  >
    Sign Up
  </Text>
</ForwardRef>
`;
